# AgentVerse

./: DEMO_GUIDE.md  README.md  TODO.md  agent.py  agentverse.db  bounty_oracle.py  hardhat.config.js  package-lock.json  package.json  prepare_agent.py  pyproject.toml  requirements.txt  run_app.bat  run_refactored_app.bat  streamlit_app.py  test_db.py
bounty_platform_mockup/: app.py
contracts/: EscrowContract.sol
data/: hotpotqa_sample.json
scripts/: batchPayout.js  demo_script.js  deploy.js  oracle.js  postBounty.js  submitAgent.js  submit_agent.js
src_py/: README.md  __init__.py  api_server.py  forte_rules_engine_demo.py  main.py  oracle_service.py  run.bat
src_py/config/: __init__.py  settings.py
src_py/database/: database.py  models.py  repository.py
src_py/models/: __init__.py  agent.py  bounty.py
src_py/services/: __init__.py  blockchain.py  ipfs.py
src_py/tests/: run_tests.bat  run_tests.ps1  test_database.py
src_py/ui/: __init__.py
src_py/ui/components/: __init__.py  footer.py  sidebar.py
src_py/ui/pages/: __init__.py  analytics.py  featured_bounties.py  leaderboard.py  legal_data_explorer.py  oracle_dashboard.py  post_bounty.py  submit_agent.py
src_py/utils/: __init__.py  helpers.py
tests/: test_agent.py
